syntax = "proto3";

message Field1 {
  message devinfo {
    message info {
        int32 apilevel = 3;
        string name = 5;
        string build_id = 6;
        string name1 = 8;
        string name2 = 9;
        string locale1 = 11;
        string locale2 = 12;
        string manufacturer1 = 13;
        string manufacturer2 = 14;
        string name3 = 15;
    }
    int32 int = 1;
    info device_info = 2;
  }
  devinfo info = 4;
}

message Field2 {
  message appinfo {
    string pkgname = 1;
  }
  appinfo info = 1;
}

message Request {
  Field1 field1 = 1;
  Field2 field2 = 2;
}