syntax = "proto3";

message Map {
    map<string, string> entry = 1;
}

message CarrierSettings {

  message unk1 {
    Map n = 1;
  }
  
  message Configs {
    string name = 1;
    int32 o = 2;
    int32 p = 3;
    unk1 unk1 = 6;
    string ext = 5;
    int32 int = 9;
  }

  message k {
    int32 l = 1;
    bytes unk = 2;
  }
  
  bytes unknown = 1;
  repeated Configs cfg = 2;
  k msg2 = 3;
  string j = 4;
}

message Field1 {
  map<string, int32> entry = 1;
  CarrierSettings settings = 2;
  Map q = 3;
  string s = 4;

}


message Response {
  Field1 field1 = 1;
  bytes field2 = 2;
  string field3 = 3;
  int32 field4 = 4;
  int32 field5 = 5;
}